--- a/6week_mini/src/main/resources/application.properties
+++ b/6week_mini/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.username=sa
 #spring.datasource.password=
 ##
-spring.datasource.url=jdbc:mysql://hellrou-db.cgpk84ixo9zu.ap-northeast-2.rds.amazonaws.com:3306/hellrou
-spring.datasource.username=hellrou
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:mysql://:3306/
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
